@@ -37,6 +37,12 @@ those fields specify the range in Z.  If there is a rubber band in the top
   Slicer window, the program will instead use Rotatevol to extract the portion
   of the file selected by the rubber band.  The depth limits of the range
   must be set with the <B>Lo</B> and <B>Hi</B> buttons.
+<LI><B>Process File...</B>:&emsp;Apply current operation(s) in the Image
+  Processing dialog to the current image file if possible.
+  If there is no Zap window with a rubber band, the whole file will be
+  processed.  Otherwise, the subarea in the rubber band will be processed, but
+  the <B>Lo</B> and <B>Hi</B> limits must be set to process more than one
+  slice. 
 <LI><B>Save Info Text...</B>:&emsp;Save the contents of the text box at the
 bottom of the Info window to a file.
 
